fix: title spacing

--- a/tire/src/app/app.component.css
+++ b/tire/src/app/app.component.css
@@ -11,3 +11,7 @@
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
+
+.title {
+  margin-top: 1rem;
+}
